# Parques-Contagem

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  manage.py  pos-release.sh  pyproject.toml  pytest.ini
.github/workflows/: fly-deploy.yml  parque
contrib/: env_sample
parques/: asgi.py  settings.py  urls.py  wsgi.py
parques/base/: admin.py  urls.py  views.py
parques/base/migrations/: 0001_initial.py
parques/base/static/css/: style.css  styles.css
parques/base/static/js/: scripts.js
parques/base/templates/base/: base.html  footer.html  home.html  index.html  layout_1.html  parque_1.html  parque_2.html  parque_3.html
parques/base/tests/: test_home.py  test_parque_1.py  test_parque_2.py  test_parque_3.py
staticfiles/css/: style.css
staticfiles/js/: scripts.js
